still trying to fix zoomed issue on mobile for site

--- a/client/livingMemoire/src/App.css
+++ b/client/livingMemoire/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
 }
 
 .logo {
@@ -33,10 +34,3 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
